<resources>
    <string name="app_name">KeePassVault</string>
    <string name="app_name_automation">KeePassVault Test</string>
    <string name="webdav">WebDAV</string>
    <string name="git">Git</string>
    <string name="device">Device</string>
    <string name="no_items">No items</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="text_with_colon" translatable="false">%s:</string>
    <string name="text_with_dots" translatable="false">%s...</string>
    <string name="remove_confirmation_message">Are you sure want to remove %1$s "%2$s" ?</string>
    <string name="status_offline_mode">Displaying data in Offline mode</string>
    <string name="status_read_only_mode">Displaying data in Read-Only mode</string>
    <string name="retry">Retry</string>
    <string name="create">Create</string>
    <string name="done">Done</string>
    <string name="open_file">Open file</string>
    <string name="new_file">New file</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="ok">Ok</string>
    <string name="lock_database">Lock database</string>
    <string name="lock">Lock</string>
    <string name="resolve">Resolve</string>
    <string name="remove">Remove</string>
    <string name="add_templates">Add entry templates</string>
    <string name="more_options">More options</string>
    <string name="paste">Paste</string>
    <string name="apply">Apply</string>
    <string name="select">Select</string>
    <string name="sort_and_view">Sort &amp; View</string>
    <string name="login">Login</string>
    <string name="refresh">Refresh</string>
    <string name="grant">Grant</string>
    <string name="toggle_hidden">Toggle hidden</string>
    <string name="dismiss">Dismiss</string>
    <string name="synchronize_with_source">Synchronize with source</string>
    <string name="details">Details</string>
    <string name="report">Report</string>
    <string name="copy">Copy</string>
    <string name="merge">Merge</string>
    <string name="url">URL</string>
    <string name="unlock_button">Unlock button</string>
    <string name="eye_icon">Eye icon</string>
    <string name="loading_indicator">Loading indicator</string>
    <string name="generate_icon">Generate icon</string>
    <string name="lock_notification_channel">Quick Lock</string>
    <string name="lock_notification_channel_description">Button to lock opened database</string>
    <string name="lock_notification_text_normal">Database is opened</string>
    <string name="lock_notification_text_not_synchronized">Database is opened, not synchronized</string>
    <string name="lock_notification_text_synchronizing">Synchronizing</string>
    <string name="sign_in_with_app">Sign in with %s</string>
    <string name="select_entry_with_dots">Select entry…</string>
    <string name="autofill_service_name">KeePassVault Autofill</string>
    <string name="autofill_save_note_message">Save previously entered data for autofill suggestions?</string>
    <string name="add_autofill_data_message">Do you want to associate selected entry with Autofill data for future use?</string>
    <string name="error_has_been_occurred">Error has been occurred</string>
    <string name="network_error_message">Network error has been occurred, check internet connection</string>
    <string name="file_permission_error_message">Unable to access to file, please provider permission for application</string>
    <string name="file_already_exists">File already exists</string>
    <string name="file_already_exists_detailed">File %s already exists</string>
    <string name="empty_field">Empty field</string>
    <string name="sync_conflict_message">There is a conflict between version of local and remote databases. Please resolve this conflict before accessing database.</string>
    <string name="sync_file_not_found_message">Unable to find database file on remote server. Please try to remove this file and add it again.</string>
    <string name="sync_auth_error_login_message">Application is unable to authenticate on remote server.</string>
    <string name="sync_auth_error_remove_message">Application is unable to authenticate on remote server. Please try to remove this file and add it again.</string>
    <string name="sync_error_message">Failed to synchronize database with remote server. Please try to remove this file and add it again.</string>
    <string name="file_not_found">File not found</string>
    <string name="resolve_conflict_dialog_message">There is a conflict between version of local and remote databases. Please resolve this conflict before accessing database.\n\nTHIS ACTION MAY LEAD TO DATA LOSS!\n\nLocal file was modified at:\n%1$s\nRemote file was modified at:\n%2$s\n\nPlease specify which version you want to use?</string>
    <string name="local_database">Local database</string>
    <string name="remote_database">Remote database</string>
    <string name="view_diff">View diff</string>
    <string name="merge_conflicts">Merge conflicts</string>
    <string name="unlock_database_error_message">Please unlock the database first</string>
    <string name="group_with_str">Group: %s</string>
    <string name="entry_with_str">Entry: %s</string>
    <string name="diff_event_property">Field \'%s\': \'%s\'</string>
    <string name="diff_event_property_update">Field \'%s\': \'%s\' changed to \'%s\'</string>
    <string name="unknown_entity">Unknown entity</string>
    <string name="compare_files">Compare files</string>
    <string name="merge_changes">Merge changes</string>
    <string name="pick_file">Pick file</string>
    <string name="opened_database">Opened database</string>
    <string name="compare">Compare</string>
    <string name="files_are_identical">Files are identical</string>
    <string name="local_changes">Local changes</string>
    <string name="remote_changes">Remote changes</string>
    <string name="merge_confirmation_message">Are you sure you want to merge the selected changes?</string>
    <string name="recently_used">Recently used</string>
    <string name="no_databases">No databases</string>
    <string name="unlock">Unlock</string>
    <string name="empty_file_name">No filename</string>
    <string name="file_is_up_to_date">File is up to date</string>
    <string name="new_version_of_file_is_available">New version of file is available</string>
    <string name="not_synchronized_and_offline_mode">Not synchronized, offline mode</string>
    <string name="offline_mode">Offline mode</string>
    <string name="checking">Checking</string>
    <string name="checking_status">Checking status</string>
    <string name="conflict">Conflict</string>
    <string name="not_synchronized">Not synchronized</string>
    <string name="synchronizing">Synchronizing</string>
    <string name="downloading">Downloading</string>
    <string name="uploading">Uploading</string>
    <string name="error">Error</string>
    <string name="not_found">Not found</string>
    <string name="error_offline_mode">Error, offline mode</string>
    <string name="auth_error_offline_mode">Unauthorised, offline mode</string>
    <string name="unauthorised">Unauthorised</string>
    <string name="change">Change</string>
    <string name="unlock_type">Unlock type</string>
    <string name="key_file">Key file</string>
    <string name="key_file_is_not_selected">Key file is not selected</string>
    <string name="unlock_with_fingerprint">Unlock with fingerprint</string>
    <string name="setup_fingerprint_unlock">Setup fingerprint unlock</string>
    <string name="setup_fingerprint_unlock_message">Please authenticate to continue</string>
    <string name="add_key">Add key</string>
    <string name="add_biometrics">Add biometrics</string>
    <string name="recent_files">Recent files</string>
    <string name="lock_notification_message">Would you like to enable system notification for opened database?\n\nThis notification requires permission, it allows to display database status and lock database more easily.</string>
    <string name="permit">Permit</string>
    <string name="later">Later</string>
    <string name="biometric_data_is_invalidated">Biometric data was invalidated (i.e. new fingerprint enrolled). Please setup biometric unlock again.</string>
    <string name="password_and_key_file">Password and key file</string>
    <string name="unlock_with">Unlock with</string>
    <string name="new_database">New database</string>
    <string name="file_name">File name</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm</string>
    <string name="you_entered_two_different_passwords_please_try_again">You entered two different passwords. Please try again.</string>
    <string name="this_field_should_match_password">This field should match password</string>
    <string name="storage_type">Storage type</string>
    <string name="not_selected">Not selected</string>
    <string name="dot_kdbx">.kdbx</string>
    <string name="private_storage">Private storage</string>
    <string name="public_storage">Public storage</string>
    <string name="storage_is_not_selected">Storage is not selected</string>
    <string name="add_note_templates">Add entry templates</string>
    <string name="add_templates_info_message">Templates allows to display only important fields and create entries with pre-defined field names.</string>
    <string name="file_path">File path</string>
    <string name="groups">Groups</string>
    <string name="no_items_to_show">No items to show</string>
    <string name="entries_with_count">Entries: %d</string>
    <string name="groups_with_count">Groups: %d</string>
    <string name="groups_and_entries_with_count">Groups: %1$d  Entries: %2$d</string>
    <string name="new_item_entry_standard_entry">Standard Entry</string>
    <string name="new_item_entry_new_group">New Group</string>
    <string name="note_remove_confirmation_message">Are you sure want to remove entry "%s" ?</string>
    <string name="group_remove_confirmation_message">Are you sure want to remove this group?</string>
    <string name="add_templates_confirmation_message">Templates allows to display only important fields and create entries with pre-defined field names. Are you sure want to add templates to Database?</string>
    <string name="successfully_removed">Successfully removed</string>
    <string name="successfully_added">Successfully added</string>
    <string name="successfully">Successfully</string>
    <string name="exported_successfully">Exported successfully</string>
    <string name="selected_item_is_already_here">Selected item is already here</string>
    <string-array name="item_actions_entries">
        <item>Edit</item>
        <item>Remove</item>
        <item>Cut</item>
    </string-array>
    <string name="search_type">Search type</string>
    <string name="search_options">Search options</string>
    <string name="search_fields">Search fields</string>
    <string name="search_scope">Search scope</string>
    <string name="searchable">Searchable</string>
    <string name="recycle_bin">Recycle Bin</string>
    <string name="other">Other</string>
    <string name="additional_options">Additional options</string>
    <string name="case_sensitive">Case sensitive</string>
    <string name="cancel">Cancel</string>
    <string name="generate">Generate</string>
    <string name="generated_password">Generated password</string>
    <string name="length">Length</string>
    <string name="upper_case">Upper-case: A…Z</string>
    <string name="lower_case">Lower-case: a…z</string>
    <string name="digits">Digits: 0…9</string>
    <string name="minus">Minus: -</string>
    <string name="underscore">Underscore: _</string>
    <string name="space">Space</string>
    <string name="special">Special: &amp;\/,^@.#&quot;:%\\='$!*`;+</string>
    <string name="brackets">Brackets: [](){}&lt;&gt;</string>
    <string name="search">Search</string>
</resources>