<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_lock"
        android:icon="@drawable/ic_lock_white_24dp"
        android:title="@string/lock"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_sort_and_view"
        android:icon="@drawable/ic_sort_white_24dp"
        android:title="@string/sort_and_view"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_add_templates"
        android:title="@string/add_templates"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_settings"
        android:title="@string/settings"
        app:showAsAction="never" />

</menu>