<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.ivanovsky.passnotes.presentation.core.widget.entity.TextInputLines" />
        <import type="com.ivanovsky.passnotes.presentation.core.widget.entity.TextInputType" />

        <import type="com.ivanovsky.passnotes.domain.entity.PasswordResource" />

        <variable
            name="viewModel"
            type="com.ivanovsky.passnotes.presentation.passwordGenerator.PasswordGeneratorViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.ivanovsky.passnotes.presentation.core.widget.MaterialEditText
                android:id="@+id/password"
                error="@{viewModel.error}"
                inputLines="@{TextInputLines.MULTIPLE_LINES}"
                text="@={viewModel.password}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/element_margin"
                android:layout_marginTop="@dimen/element_margin"
                app:description="@string/generated_password"
                app:hint="@string/generated_password"
                app:isEyeButtonEnabled="true"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/generateButton"
                style="@style/Material.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/element_margin"
                android:layout_marginTop="@dimen/element_margin"
                android:onClick="@{() -> viewModel.onGenerateButtonClicked()}"
                android:text="@string/generate"
                app:layout_constraintTop_toBottomOf="@id/password" />

            <com.ivanovsky.passnotes.presentation.core.widget.MaterialEditText
                android:id="@+id/lengthInput"
                inputType="@{TextInputType.DIGITS}"
                text="@={viewModel.length}"
                maxLength="@{3}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/element_margin"
                android:layout_marginTop="@dimen/element_margin"
                android:minWidth="@dimen/password_length_edit_text_min_width"
                app:hint="@string/length"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/generateButton"
                app:onTextChanged="@{(text) -> viewModel.onLengthInputChanged(text)}" />

            <com.google.android.material.slider.Slider
                android:id="@+id/lengthSlider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/element_margin"
                android:stepSize="1.0"
                android:valueFrom="@{viewModel.sliderMin}"
                android:valueTo="@{viewModel.sliderMax}"
                android:value="@{viewModel.sliderValue}"
                app:layout_constraintBottom_toBottomOf="@id/lengthInput"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/lengthInput"
                app:layout_constraintTop_toTopOf="@id/lengthInput"
                app:onSliderValueChanged="@{(value) -> viewModel.onLengthSliderPositionChanged(value)}" />

            <CheckBox
                android:id="@+id/uppercaseCheckBox"
                style="@style/Material.PrimaryText.SingleLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/element_margin"
                android:layout_marginTop="@dimen/element_margin"
                android:checked="@={viewModel.isUppercaseChecked}"
                android:onCheckedChanged="@{(button, isChecked) -> viewModel.onSymbolsCheckedChanged(isChecked, PasswordResource.UPPERCASE)}"
                android:text="@string/upper_case"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lengthInput" />

            <CheckBox
                android:id="@+id/lowercaseCheckBox"
                style="@style/Material.PrimaryText.SingleLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/element_margin"
                android:layout_marginTop="@dimen/quarter_margin"
                android:checked="@={viewModel.isLowercaseChecked}"
                android:onCheckedChanged="@{(button, isChecked) -> viewModel.onSymbolsCheckedChanged(isChecked, PasswordResource.LOWERCASE)}"
                android:text="@string/lower_case"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/uppercaseCheckBox" />

            <CheckBox
                android:id="@+id/digitsCheckBox"
                style="@style/Material.PrimaryText.SingleLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/element_margin"
                android:layout_marginTop="@dimen/quarter_margin"
                android:checked="@={viewModel.isDigitsChecked}"
                android:onCheckedChanged="@{(button, isChecked) -> viewModel.onSymbolsCheckedChanged(isChecked, PasswordResource.DIGITS)}"
                android:text="@string/digits"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lowercaseCheckBox" />

            <CheckBox
                android:id="@+id/minusCheckBox"
                style="@style/Material.PrimaryText.SingleLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/element_margin"
                android:layout_marginTop="@dimen/quarter_margin"
                android:checked="@={viewModel.isMinusChecked}"
                android:onCheckedChanged="@{(button, isChecked) -> viewModel.onSymbolsCheckedChanged(isChecked, PasswordResource.MINUS)}"
                android:text="@string/minus"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/digitsCheckBox" />

            <CheckBox
                android:id="@+id/underscoreCheckBox"
                style="@style/Material.PrimaryText.SingleLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/element_margin"
                android:layout_marginTop="@dimen/quarter_margin"
                android:checked="@={viewModel.isUnderscoreChecked}"
                android:onCheckedChanged="@{(button, isChecked) -> viewModel.onSymbolsCheckedChanged(isChecked, PasswordResource.UNDERSCORE)}"
                android:text="@string/underscore"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/minusCheckBox" />

            <CheckBox
                android:id="@+id/spaceCheckBox"
                style="@style/Material.PrimaryText.SingleLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/element_margin"
                android:layout_marginTop="@dimen/quarter_margin"
                android:checked="@={viewModel.isSpaceChecked}"
                android:onCheckedChanged="@{(button, isChecked) -> viewModel.onSymbolsCheckedChanged(isChecked, PasswordResource.SPACE)}"
                android:text="@string/space"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/underscoreCheckBox" />

            <CheckBox
                android:id="@+id/specialCheckBox"
                style="@style/Material.PrimaryText.SingleLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/element_margin"
                android:layout_marginTop="@dimen/quarter_margin"
                android:checked="@={viewModel.isSpecialChecked}"
                android:onCheckedChanged="@{(button, isChecked) -> viewModel.onSymbolsCheckedChanged(isChecked, PasswordResource.SPECIAL)}"
                android:text="@string/special"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spaceCheckBox" />

            <CheckBox
                android:id="@+id/bracketsCheckBox"
                style="@style/Material.PrimaryText.SingleLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/element_margin"
                android:layout_marginTop="@dimen/quarter_margin"
                android:checked="@={viewModel.isBracketsChecked}"
                android:onCheckedChanged="@{(button, isChecked) -> viewModel.onSymbolsCheckedChanged(isChecked, PasswordResource.BRACKETS)}"
                android:text="@string/brackets"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/specialCheckBox" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>